--- a/nnotes/pubspec.yaml
+++ b/nnotes/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   localstore: ^1.4.0
   intl: ^0.19.0
   flutter_quill: ^9.3.1
+  cloud_firestore: ^6.0.0
   # flutter_quill: ^11.0.1
   # flutter_quill_extensions: ^11.0.0
 
