--- a/nnotes/pubspec.yaml
+++ b/nnotes/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.19.0
   flutter_quill: ^9.3.1
   cloud_firestore: ^6.0.0
+  flutter_launcher_icons: ^0.14.4
   # flutter_quill: ^11.0.1
   # flutter_quill_extensions: ^11.0.0
 
